# CITB106-F2024-Project-2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-linux.yml  cmake-single-platform.yml  cmake-windows.yml
input/: mock_input.txt
src/: main.cpp  user_input.cpp  user_input.h
src/utils/: concepts.h  concepts.hpp  divisors.cpp  divisors.h  divisors.hpp  helper_functions.cpp  helper_functions.h  helper_functions.hpp  math.cpp  math.h  mersenne.cpp  mersenne.h  mersenne.hpp  perfect_nums.cpp  perfect_nums.h  perfect_nums.hpp  primes.cpp  primes.h  primes.hpp  set_math.cpp  set_math.h  set_math.hpp
test/: CMakeLists.txt  main.cpp
test/cases/: test_difference.cpp  test_difference.hpp  test_divisors.cpp  test_divisors.hpp  test_mersenne_numbers.cpp  test_mersenne_numbers.hpp  test_mersenne_prime_numbers.cpp  test_mersenne_prime_numbers.hpp  test_perfect_numbers.cpp  test_perfect_numbers.hpp  test_prime_factors.cpp  test_prime_factors.hpp
